# FivaproljoTasks

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt
demo/include/: Application.h  Background.h  Block.h  Controller.h  Game.h  KeyPresser.h  LevelStatistics.h  LevelStatisticsTest.h  Menu.h  MenuButton.h  Model.h  Object.h  Player.h  PlayerSelection.h  Scene.h  Server.h  StateMachine.h  Test.h  Utilities.h
demo/levels/: Level1.json  Level2.json  Level_HSE.json  demo.json
demo/src/: Application.cpp  Background.cpp  Block.cpp  Controller.cpp  Game.cpp  KeyPresser.cpp  LevelStatistics.cpp  LevelStatisticsTest.cpp  Menu.cpp  Model.cpp  Object.cpp  Player.cpp  PlayerSelection.cpp  Scene.cpp  Server.cpp  StateMachine.cpp  Test.cpp  main.cpp
poc_cmake/: CMakeLists.txt  README.md  fvmake
poc_cmake/UserGuide/: CMakeGuide.md  ScriptGuide.md
poc_cmake/example_hw_02/: CMakeLists.txt
poc_cmake/example_hw_02/include/: GameController.h  NcursesBoardView.h
poc_cmake/example_hw_02/src/: Board.cpp  GameController.cpp  StdioBoardView.cpp
poc_cmake/example_hw_02/test/: Test.cpp  main_test.cpp
poc_cmake/example_qt/: CMakeLists.txt
poc_cmake/example_qt/include/: Player.hpp
poc_cmake/example_qt/src/: Player.cpp  main.cpp
poc_cmake/include/: Board.h  BoardTest.h  HeaderOnly.hpp  StdioBoardView.h  Test.h  View.h
poc_cmake/src/: NcursesBoardView.cpp  View.cpp  main.cpp
poc_cmake/test/: BoardTest.cpp
poc_demo/: Block.cpp  Block.h  CMakeCache.txt  CMakeLists.txt  Makefile  Object.cpp  Object.hpp  background.cpp  background.h  cmake_install.cmake  demo  demo.cbp  scene.h
poc_demo/include/: #Object.h#  Block.h  Controller.hpp  DemoPlayer.h  Entity.h  Model.h  Model.hpp  Object.h  Object.hpp  Player.h  Player.hpp  Scene.h  demo_level.h  scene.h  staff.hpp
poc_demo/src/: Background.cpp  Block.cpp  Controller.cpp  DemoPlayer.cpp  Entity.cpp  Model.cpp  Object.cpp  Player.cpp  Scene.cpp  demo_level.cpp  main.cpp  scene.cpp
poc_tests/: CMakeLists.txt  UserGuide.md  test_tmplt.md  tests
poc_tests/include/: my_vector.h  my_vector_impl.h
poc_tests/test/: CMakeLists.txt
poc_tests/test/data/: test_types.h
src/: main.cpp
test/: my_vector_test.cpp
