cmake_minimum_required(VERSION 3.15)
project(demo)

set(CMAKE_CXX_STANDARD 17)
file(GLOB sources include/*.h src/*.cpp *.qrc include/*.hpp)
include_directories(include)
add_executable(demo ${sources} include/staff.hpp Object.cpp Object.hpp)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_PREFIX_PATH "/home/daniel/Qt5.14.1/5.14.1/gcc_64")
find_package(Qt5 COMPONENTS Widgets REQUIRED)
find_package(Qt5Multimedia REQUIRED)
target_link_libraries(demo Qt5::Widgets Qt5::Multimedia)